; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid1.c_map_region.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid1.c_map_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_io_region = type { i32, i32, i32 }
%struct.mirror = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.bio = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dm_io_region*, %struct.mirror*, %struct.bio*)* @map_region to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @map_region(%struct.dm_io_region* %0, %struct.mirror* %1, %struct.bio* %2) #0 {
  %4 = alloca %struct.dm_io_region*, align 8
  %5 = alloca %struct.mirror*, align 8
  %6 = alloca %struct.bio*, align 8
  store %struct.dm_io_region* %0, %struct.dm_io_region** %4, align 8
  store %struct.mirror* %1, %struct.mirror** %5, align 8
  store %struct.bio* %2, %struct.bio** %6, align 8
  %7 = load %struct.mirror*, %struct.mirror** %5, align 8
  %8 = getelementptr inbounds %struct.mirror, %struct.mirror* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.dm_io_region*, %struct.dm_io_region** %4, align 8
  %13 = getelementptr inbounds %struct.dm_io_region, %struct.dm_io_region* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 4
  %14 = load %struct.mirror*, %struct.mirror** %5, align 8
  %15 = load %struct.bio*, %struct.bio** %6, align 8
  %16 = call i32 @map_sector(%struct.mirror* %14, %struct.bio* %15)
  %17 = load %struct.dm_io_region*, %struct.dm_io_region** %4, align 8
  %18 = getelementptr inbounds %struct.dm_io_region, %struct.dm_io_region* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.bio*, %struct.bio** %6, align 8
  %20 = call i32 @bio_sectors(%struct.bio* %19)
  %21 = load %struct.dm_io_region*, %struct.dm_io_region** %4, align 8
  %22 = getelementptr inbounds %struct.dm_io_region, %struct.dm_io_region* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  ret void
}

declare dso_local i32 @map_sector(%struct.mirror*, %struct.bio*) #1

declare dso_local i32 @bio_sectors(%struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
